[package]
name = "symbols"
version = "0.1.0"
edition = "2021"
description = "Plugin to look up unicode symbols and custom user defined symbols"
license = "GPLv3"
homepage = "https://github.com/anyrun-org/plugin-symbols"
repository = "https://github.com/anyrun-org/plugin-symbols"
readme = "README.md"
author = ["Kirottu"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.1"
anyrun-plugin = "0.1.0"
fuzzy-matcher = "0.3.7"
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
